Included some hints from review.
Signed-off-by: kaizimmerm <kai.zimmermann@bosch-si.com>